<resources>
    <string name="app_name">Quiz-me</string>
    <string name="hint_id">Enter Your Teacher\'s Name</string>
    <string name="next">Next</string>
    <string name="loading">Loading....</string>
    <string name="firstName">Register.</string>
    <string name="enterYourName">Enter your email</string>
    <string name="enterYourPassword">Enter your password</string>
    <string name="uploadRecord">TAP AND HOLD TO RECORD</string>
    <string name="logoDescription">Quiz-Me Application</string>
    <string name="logoName">Quiz Me</string>
    <string name="score">SCORE</string>
    <string name="scoreValue">5/10</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="loginHere">Already Registered? Login here</string>
    <string name="resetPassword">RESET PASSWORD</string>
</resources>