<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/upload_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/uploadRecord"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/registerNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</ScrollView>